# ZeroCAD

./: .gitignore  5Reasons For Artifacts.md  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  THIRD_PARTY_NOTICES  cutout_fillet_meshproblem.zcad  fillet_problem.zcad
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
OpenRCAD/: CLAUDE.md  Cargo.toml  INTEGRATION.md  KERNEL_HARDENING_PLAN.md  LICENSE-APACHE  LICENSE-MIT  README.md  architecture.html  crates.html  docs.css  getting-started.html  index.html  status.html
OpenRCAD/crates/openrcad-algo/: Cargo.toml
OpenRCAD/crates/openrcad-algo/src/: blend.rs  boolean.rs  bvh.rs  chamfer.rs  contour.rs  euler.rs  facade.rs  fillet.rs  imprint.rs  intersect.rs  lib.rs  merge.rs  offset.rs  prism.rs  rolling_ball.rs  sew.rs
OpenRCAD/crates/openrcad-algo/tests/: boolean_determinism.rs  boolean_identity.rs  boolean_robustness_matrix.rs  edge_param_consistency.rs  perf_tessellate.rs  repro_circular_bite.rs  repro_curved_wall_runout.rs  repro_cut_fillet.rs  repro_cylinder.rs  repro_fillet.rs  repro_fillet_then_cut.rs  repro_gui_cracks.rs  repro_screenshots.rs  repro_sequential_fillet.rs  robustness.rs
OpenRCAD/crates/openrcad-document/: Cargo.toml
OpenRCAD/crates/openrcad-document/src/: lib.rs  zcad_format.rs
OpenRCAD/crates/openrcad-exchange/: Cargo.toml
OpenRCAD/crates/openrcad-exchange/src/: lib.rs  step_reader.rs  step_writer.rs  stl.rs
OpenRCAD/crates/openrcad-foundation/: Cargo.toml
OpenRCAD/crates/openrcad-foundation/src/: axis.rs  bnd.rs  dir.rs  double_double.rs  frame.rs  interval.rs  lib.rs  mat.rs  pnt.rs  predicates.rs  tolerance.rs  trsf.rs  vec.rs  xyz.rs
OpenRCAD/crates/openrcad-geom/: Cargo.toml
OpenRCAD/crates/openrcad-geom/src/: bspline_curve.rs  bspline_surface.rs  circle.rs  cone.rs  curve.rs  cylinder.rs  ellipse.rs  gregory.rs  hyperbola.rs  interval_bounds.rs  lib.rs  line.rs  offset.rs  parabola.rs  plane.rs  ruled.rs  sphere.rs  surface.rs  torus.rs
OpenRCAD/crates/openrcad-geom2d/: Cargo.toml
OpenRCAD/crates/openrcad-geom2d/src/: bspline.rs  circle.rs  curve.rs  ellipse.rs  hyperbola.rs  lib.rs  line.rs  parabola.rs
OpenRCAD/crates/openrcad-mesh/: Cargo.toml
OpenRCAD/crates/openrcad-mesh/src/: lib.rs  triangulate.rs
OpenRCAD/crates/openrcad-primitives/: Cargo.toml
OpenRCAD/crates/openrcad-primitives/src/: box_solid.rs  common.rs  cone.rs  cylinder.rs  lib.rs  sphere.rs  wedge.rs
OpenRCAD/crates/openrcad-render/: Cargo.toml
OpenRCAD/crates/openrcad-render/examples/: spinning_box.rs
OpenRCAD/crates/openrcad-render/src/: camera.rs  edges.rs  lib.rs  pick.rs  scene.rs  shader.wgsl  state.rs
OpenRCAD/crates/openrcad-sketch/: Cargo.toml
OpenRCAD/crates/openrcad-sketch/src/: lib.rs
OpenRCAD/crates/openrcad-topo/: Cargo.toml
OpenRCAD/crates/openrcad-topo/src/: arena.rs  builder.rs  containment.rs  edge.rs  face.rs  lib.rs  orientation.rs  shape.rs  shell.rs  solid.rs  validate.rs  vertex.rs  wire.rs
OpenRCAD/crates/openrcad-truck-compat/: Cargo.toml
OpenRCAD/crates/openrcad-truck-compat/src/: lib.rs
OpenRCAD/src/: lib.rs
zerocad-core/: Cargo.toml
zerocad-core/src/: expr.rs  geometry.rs  lib.rs  mock_kernel.rs  parametric.rs  sketch.rs  stl.rs  units.rs  zcad_format.rs
zerocad-core/src/mock_kernel/: arc_display.rs  blend.rs  boolean.rs  circle_geom.rs  edge_ops.rs  geom_utils.rs  history.rs  mesh_topology.rs  mod.rs  primitives.rs  tessellation.rs  types.rs  wireframe.rs
zerocad-core/src/parametric/: cut.rs  edge_mod.rs  eval.rs  extrude.rs  join.rs  mod.rs  types.rs
zerocad-core/src/parametric/tests/: boolean_extrude.rs  caching.rs  circular_bite.rs  circular_bite_helpers.rs  common.rs  edge_mods.rs  extrude_modes.rs  fillet_chamfer.rs  mod.rs  reattachment_matrix.rs  variables.rs
zerocad-core/tests/: bool_matrix.rs  corner_bite_extrude.rs  cylinder_tests.rs  diag_tangent_join.rs  parametric_tests.rs  primitive_equals_extrude.rs  realistic_modes.rs  repro_cutout_fillet_mesh.rs  repro_extrude_one_region.rs  repro_fillet_problem_zcad.rs  repro_fillet_then_cut.rs  repro_fillet_then_fillet.rs  repro_gui_issues.rs  repro_miter_render.rs  serialization.rs  sketch_fillet_convexity.rs  sketch_fillet_extrude.rs  smooth_cylinder.rs  zcad_format.rs
zerocad-gui/: Cargo.toml
zerocad-gui/src/: edgemod.rs  expr.rs  extrude.rs  geom2d.rs  icons.rs  main.rs  render.rs  settings.rs  shortcuts.rs  sketch_ui.rs  theme.rs  thumbnail.rs
zerocad-gui/src/app/: base.rs  editing.rs  eval.rs  io.rs  mod.rs  picking.rs  sketch.rs  update.rs
zerocad-gui/src/app/ui/: extrude_panel.rs  feature_properties.rs  feature_tree.rs  frame.rs  mod.rs  settings_window.rs  status_bar.rs  top_bar.rs  top_bar_commands.rs  top_bar_file_menu.rs  top_bar_sketch_tools.rs  viewport.rs
