[workspace]
resolver = "2"
members = [
    "zerocad-core",
    "zerocad-gui",
]

# Release profile tuned for a lean, fast binary.
# NOTE: `panic` is deliberately left at the default "unwind" — `guarded_boolean`
# in zerocad-core relies on `std::panic::catch_unwind` to survive truck's
# boolean-solver panics on cylinders/coplanar faces. Setting panic = "abort"
# here would turn those recoverable panics into hard crashes.
[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
panic = "unwind"

[workspace.dependencies]
petgraph = { version = "0.6", features = ["serde-1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.5"
rayon = "1.8"
log = "0.4"
env_logger = "0.10"
wgpu = "0.19"
winit = { version = "0.29", features = ["rwh_06"] }
egui = "0.26"
egui-wgpu = "0.26"
eframe = { version = "0.26", features = ["wgpu"] }
bytemuck = { version = "1.14", features = ["derive"] }
truck-modeling = "0.6"
truck-meshalgo = "0.4"
truck-polymesh = "0.6"
truck-topology = "0.6"
truck-shapeops = { version = "0.4", default-features = false }
rfd = "0.14"
ciborium = "0.2"
zstd = "0.13"
crc32fast = "1.4"
png = "0.17"
