[package]
name = "openrcad-geom"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "3D geometry for OpenRCAD — curves and surfaces (the OCCT TKG3d / TKGeomBase / Geom layer)."
categories = ["mathematics", "graphics"]
keywords = ["cad", "geometry", "geom", "occt"]

[dependencies]
openrcad-foundation.workspace = true
serde.workspace = true
